moving metainfo lib to metainfo subdir, making this a workspace and creating the tracker binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "rusty-tracker"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-bencode = "0.1.16"
+members = [
+    "metainfo",
+    "tracker"
+]
