--- a/tracker/Cargo.toml
+++ b/tracker/Cargo.toml
@@ -9,5 +9,10 @@ edition = "2021"
 tokio = { version = "1.0", features = ["full"] }
 axum = { version = "0.6.18", all-features = true }
 axum-template = { version = "0.18.0", features = ["handlebars"] }
+axum-login = { version = "0.5.0", features = ["sqlite", "sqlx"] }
 handlebars = { version = "4.3.3", default-features = false, features = ["dir_source"] }
 serde = { version = "1.0.164", features = ["serde_derive"] }
+sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
+argon2 = "0.5.0"
+rustls = "0.21.2"
+dotenv = "0.15.0"
