--- a/tracker/Cargo.toml
+++ b/tracker/Cargo.toml
@@ -16,3 +16,5 @@ sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
 argon2 = "0.5.0"
 rustls = "0.21.2"
 dotenv = "0.15.0"
+tracing-subscriber = { version = "0.3.17" }
+tower-http = { version = "0.4.1", features = ["trace"] }
